<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.twak.chordatlas</groupId>
	<artifactId>chordatlas</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

	<plugin>
		<artifactId>maven-assembly-plugin</artifactId>
		<configuration>
			<archive>
				<manifest>
					<mainClass>org.twak.tweed.gen.SkelFootprintConsole</mainClass>
				</manifest>
			</archive>
			<descriptorRefs>
				<descriptorRef>jar-with-dependencies</descriptorRef>
			</descriptorRefs>
		</configuration>
	</plugin>
			
			
		</plugins>
	</build>

	<repositories>

		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>

		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>

		<repository>
			<id>jcenter</id>
			<url>http://jcenter.bintray.com</url>
		</repository>

	</repositories>

	<properties>
		<jme3_g>org.jmonkeyengine</jme3_g>
		<jme3_v>3.1.0-stable</jme3_v>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<geotools.version>15.1</geotools.version>

	</properties>

	<dependencies>

		<dependency>
			<groupId>org.twak.utils</groupId>
			<artifactId>utils</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.twak.siteplan</groupId>
			<artifactId>siteplan</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-xml</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-swing</artifactId>
			<version>${geotools.version}</version>
			<exclusions>
				<exclusion>
					<groupId>it.geosolutions.imageio-ext</groupId>
					<artifactId>imageio-ext-tiff</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-extension</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.8.1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>


		<dependency>
			<groupId>${jme3_g}</groupId>
			<artifactId>jme3-core</artifactId>
			<version>${jme3_v}</version>
		</dependency>
		<dependency>
			<groupId>${jme3_g}</groupId>
			<artifactId>jme3-desktop</artifactId>
			<version>${jme3_v}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>${jme3_g}</groupId>
			<artifactId>jme3-lwjgl</artifactId>
			<version>${jme3_v}</version>
		</dependency>
		<dependency>
			<groupId>${jme3_g}</groupId>
			<artifactId>jme3-effects</artifactId>
			<version>${jme3_v}</version>
		</dependency>

	<dependency>
		<groupId>org.apache.xmlgraphics</groupId>
		<artifactId>batik-svg-dom</artifactId>
		<version>1.8</version>
	</dependency>
	<dependency>
		<groupId>org.apache.xmlgraphics</groupId>
		<artifactId>batik-svggen</artifactId>
		<version>1.8</version>
	</dependency>
	<dependency>
		<groupId>org.apache.xmlgraphics</groupId>
		<artifactId>batik-codec</artifactId>
		<version>1.8</version>
	</dependency>
		

		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.9</version>
		</dependency>

		<dependency>
			<groupId>local_gurobi</groupId>
			<artifactId>gurobi</artifactId>
			<version>701</version>
		</dependency>

		<dependency>
			<groupId>com.github.haifengl</groupId>
			<artifactId>smile-core</artifactId>
			<version>1.2.1</version>
		</dependency>
		<!-- java topology suite <dependency> <groupId>com.vividsolutions</groupId> 
			<artifactId>jts</artifactId> <version>1.13</version> </dependency> -->

		<dependency>
			<groupId>com.esotericsoftware.yamlbeans</groupId>
			<artifactId>yamlbeans</artifactId>
			<version>1.09</version>
		</dependency>
	</dependencies>

</project>
